--- a/index.html
+++ b/index.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheets and Font Awesome -->
+    <script src="https://kit.fontawesome.com/11347facfb.js" crossorigin="anonymous"></script>
     <title>Expense Tracker App | Array Methods & Local Storage</title>
 </head>
 <body>
     
+    <h2>Expense Tracker</h2>
+
+    <div class="container">
+        <h4>Your Balance</h4>
+        <h1 id="balance">$0.00</h1>
+
+        <div class="inc-exp-container">
+            <!-- Income -->
+            <div>
+                <h4>Income</h4>
+                <p id="money-plus" class="money plus">
+                    +$0.00
+                </p>
+            </div>
+            <!-- Expense -->
+            <div>
+                <h4>Expense</h4>
+                <p id="money-minus" class="money minus">
+                    -$0.00
+                </p>
+            </div>
+        </div>
+
+        <h3>History</h3>
+        <ul id="list" class="list">
+            <li class="minus">
+                Cash 
+                <span>-$400</span>
+                <button class="delete-btn"> X </button>
+            </li>
+        </ul>
+
+        <h3>Add new transaction</h3>
+        <form id="form">
+            <div class="form-control">
+                <label for="text">Text</label>
+                <input type="text" name="text" id="text" placeholder="Enter text...">
+            </div>
+            <div class="form-control">
+                <label for="amount">Amount <br> (negative - expense, positive for income)</label>
+                <input type="number" id="amount" placeholder="Enter amount...">
+            </div>
+            <button class="btn">Add transaction</button>
+        </form>
+    </div>
     <!-- Scripts -->
     <script src="./assets/js/app.js"></script>
 </body>
