--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheets and Font Awesome -->
     <script src="https://kit.fontawesome.com/11347facfb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Expense Tracker App | Array Methods & Local Storage</title>
 </head>
 <body>
@@ -35,11 +36,11 @@
 
         <h3>History</h3>
         <ul id="list" class="list">
-            <li class="minus">
+            <!-- <li class="minus">
                 Cash 
                 <span>-$400</span>
                 <button class="delete-btn"> X </button>
-            </li>
+            </li> -->
         </ul>
 
         <h3>Add new transaction</h3>
@@ -49,12 +50,15 @@
                 <input type="text" name="text" id="text" placeholder="Enter text...">
             </div>
             <div class="form-control">
-                <label for="amount">Amount <br> (negative - expense, positive for income)</label>
+                <label for="amount">Amount <br> 
+                    (negative - expense, positive for income)
+                </label>
                 <input type="number" id="amount" placeholder="Enter amount...">
             </div>
             <button class="btn">Add transaction</button>
         </form>
     </div>
+
     <!-- Scripts -->
     <script src="./assets/js/app.js"></script>
 </body>
